# doan

./: .env.example  .gitignore  1_Mẫu báo cáo tiến độ ĐA_Lần 2 năm 2025-1.docx  DeCuongDATN_LamQuangTri.docx  Dockerfile  LICENSE  LICENSE.txt  README.MD  README.md  README_FUNCTIONAL.md  app.py  backend-architecture.mmd  check_setup.py  chroma-architecture.mmd  clean.py  compose.yaml  core-architecture.mermaid  core-architecture.mmd  crawl.py  decuong.md  deployment-plan.mermaid  docker-compose.yml  export_qdrant.py  implementation-details.md  implementation-plan.md  import_qdrant.py  indexing-flow.mmd  ingest.py  init_admin_user.py  init_conversation_collections.py  main.py  pyproject.toml  query_cli.py  request-flow.mmd  revised-architecture.mermaid  setup.sh  system-architecture.mmd  web-backend-details.md
.github/workflows/: docker-image.yml
docs/: arch.mmd  cli_usage.md  core-arch.mmd  decuong.md  import_export_guide.md  langchain_qdrant_implementation.md  usage_guide.md
notebooks/: qdrant_import_export.ipynb
src/: __init__.py  main.py
src/api/: __init__.py
src/api/auth/: __init__.py  auth.py  auth_handler.py  dependencies.py  migrate_user_data.py  models.py  redis_service.py  utils.py
src/api/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  logging_middleware.py  rate_limit_middleware.py
src/api/routes/: __init__.py  auth.py  chat.py  health.py
src/api/schemas/: __init__.py  auth.py  chat.py  common.py
src/api/services/: __init__.py  conversation_service.py
src/chatbot/: __init__.py
src/chatbot/cli/: __init__.py  main.py
src/chatbot/config/: __init__.py  settings.py
src/chatbot/core/: __init__.py  chatbot.py  ingest.py  vector_store.py
src/chatbot/utils/: __init__.py
src/config/: __init__.py  config.py
src/core/: __init__.py  types.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  config.py
src/langchain_integration/: __init__.py  agent_system.py  config.py  enhanced_search.py  facade.py  llm_intent_analyzer.py  llm_search_agent.py  llm_search_system.py  order_intent_analyzer.py  pipeline.py  product_deduplication.py  product_introduction_agent.py  product_introduction_agent_fixed.py  simplified_order_handler.py  text_processor.py  unified_smart_agent.py  vectorstore.py  web_search.py
src/services/: __init__.py  qa_pipeline.py  vector_store.py  web_search.py
src/streamlit/: README.md  app.py  app_clean.py
src/utils/: __init__.py  text_processing.py
