[project]
name = "doan"
version = "0.1.0"
authors = [{ name = "Lâm Quang Trí", email = "quangtri.lam.9@gmail.com" }]
maintainers = [{ name = "Lâm Quang Trí", email = "quangtri.lam.9@gmail.com" }]
description = "Hệ thống hỏi đáp sản phẩm điện tử"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai",
    "langchain-community",
    "qdrant-client",
    "sentence-transformers",
    "python-dotenv",
    "torch",
    "pandas",
    "numpy",
    "pydantic-settings",
    "langchain-huggingface",
    "langchain-docling",
    "typer",
    "rich",
    "langchain-qdrant",
    "streamlit",
    "duckduckgo-search",
    "litestar[brotli,jwt,redis,structlog]",
    "litestar-granian",
    "taskiq-litestar",
    "taskiq-aio-pika",
    "taskiq-redis",
]
